--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,21 @@
-<form action="/posts/create" method="POST">
-  <div class="form-group">
-    <label for="title">heading</label>
-    <input type="text" name="post[title]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Select a topic</label>
-    <select class="form-control">
-    <% @topics.each do |item| %>
-    <option value="<% topics.id %>"><% topics.title %></option>
-    <% end %>%>
-      <option>1</option>
-      <% end %>
-    </select>
-  </div>
-  <div class="form-group">
-    <label>Text:</label>
-    <textarea name="post[body]" class="form-control" rows="10"></textarea>
-  </div>
-</form>
+<div class="col-md-8">
+    <form action="/posts/create" method="POST">
+    <div class="form-group">
+        <label for="title">heading</label>
+        <input type="text" name="post[title]" class="form-control">
+    </div>
+    <div class="form-group" name="post[topic_id]">
+        <label for="exampleFormControlSelect1">Select a topic</label>
+        <select class="form-control">
+        <% @topics.each do |topic| %>
+        <option value="<%= topic.id %>"><%= topic.title %></option>
+        <% end %>
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Text:</label>
+        <textarea name="post[body]" class="form-control" rows="10"></textarea>
+    </div>
+      <button type="submit" class="btn btn-primary">Create</button>
+    </form>
+</div>
